# app-rest

./: .gitignore  Cargo.toml  index.html  index.js
.github/workflows/: deploy.yml
assets/: app_wasm_bg-BSR9rKZh.wasm  index-ByIWnNiC.js  index-NGaGRtRJ.css  index-W9v-TjO3.js
src/: lib.rs
web/: index.html  package.json  style.css  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
