[package]
name = "app-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [ "Headers",  "Window", "Document", "Element", "Node", "HtmlElement", "console", "RequestInit", "RequestMode", "Request", "Response"] }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
url = "2.5.7"

